--- a/Foodie/Info.plist
+++ b/Foodie/Info.plist
@@ -24,6 +24,10 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Current location is used to find restaurants nearby</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Current location is used to find restaurants nearby</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
